@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdeprint
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeprint/ChangeLog,v 1.38 2006/03/27 23:42:14 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdeprint/ChangeLog,v 1.39 2006/03/30 17:38:40 carlo Exp $
+
+  30 Mar 2006; Carsten Lohrke <carlo@gentoo.org> kdeprint-3.5.2.ebuild:
+  Missing runtime dependencies.
 
   27 Mar 2006; Aron Griffis <agriffis@gentoo.org> kdeprint-3.5.0.ebuild,
   kdeprint-3.5.1.ebuild, kdeprint-3.5.2.ebuild:
